ghost/svc-ghost.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
spec:
  selector:
    app: ghost
  ports:
  - protocol: TCP
    port: 2368
    targetPort: 2368
  type: ClusterIP
